--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ streamlink==7.5.0
 twitchAPI==4.5.0
 pre-commit==4.3.0
 commitizen==4.8.3
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-CORS==4.0.0
+python-dotenv==1.0.0
