Update env.example to make DOWNLOAD_VOLUME_PATH required and update SETUP.md documentation

--- a/env.example
+++ b/env.example
@@ -16,5 +16,5 @@ PORT=2344
 SECRET_KEY=your-secret-key-change-this-in-production
 DOWNLOAD_PATH=/app/download
 
-# Volume Paths (Optional - override default paths)
-# DOWNLOAD_VOLUME_PATH=/path/to/your/download/directory
+# Volume Paths (Required - set your local download directory)
+DOWNLOAD_VOLUME_PATH=/path/to/your/download/directory
