Fix duplicate streamers, UNDESIRED_GAME filtering, conversion tab loading, and add persistent data volumes

--- a/docker-compose.web.yml
+++ b/docker-compose.web.yml
@@ -11,7 +11,8 @@ services:
       - "2344:8080"  # Non-standard port to avoid conflicts
     volumes:
       - ${DOWNLOAD_VOLUME_PATH:-./download}:/app/download
-      - ./data:/app/data  # For database persistence
+      - ${DATA_VOLUME_PATH:-./data}:/app/data  # For database persistence
+      - ${CONFIG_VOLUME_PATH:-./config}:/app/config  # For persistent configurations
     environment:
       # Web GUI Configuration
       - PORT=8080
