Fix permission error by using relative paths for volume directories

--- a/env.example
+++ b/env.example
@@ -16,7 +16,7 @@ PORT=2344
 SECRET_KEY=your-secret-key-change-this-in-production
 DOWNLOAD_PATH=/app/download
 
-# Volume Paths (Required - set your local directories)
-DOWNLOAD_VOLUME_PATH=/path/to/your/download/directory
-DATA_VOLUME_PATH=/path/to/your/data/directory
-CONFIG_VOLUME_PATH=/path/to/your/config/directory
+# Volume Paths (Optional - uses relative paths by default)
+DOWNLOAD_VOLUME_PATH=./download
+DATA_VOLUME_PATH=./data
+CONFIG_VOLUME_PATH=./config
