--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -23,11 +23,14 @@ RUN mkdir -p /app/download /app/data /app/config
 
 # Create non-root user
 RUN addgroup -g 1000 streamlink && \
-    adduser -D -s /bin/sh -u 1000 -G streamlink streamlink && \
-    chown -R streamlink:streamlink /app
+    adduser -D -s /bin/sh -u 1000 -G streamlink streamlink
 
-# Switch to non-root user
-USER streamlink
+# Set proper permissions for the streamlink user
+RUN chown -R streamlink:streamlink /app && \
+    chmod -R 755 /app
+
+# Keep running as root for now to ensure database creation works
+# USER streamlink
 
 # Expose the web port
 EXPOSE 8080
