Improve data persistence: use /app/data as primary database location for better volume mapping

--- a/env.example
+++ b/env.example
@@ -16,7 +16,8 @@ PORT=2344
 SECRET_KEY=your-secret-key-change-this-in-production
 DOWNLOAD_PATH=/app/download
 
-# Volume Paths (Optional - uses relative paths by default)
+# Volume Paths (Required - set your local directories for persistence)
+# These directories will persist data even if the Docker container is deleted/recreated
 DOWNLOAD_VOLUME_PATH=./download
 DATA_VOLUME_PATH=./data
 CONFIG_VOLUME_PATH=./config
