Move persistent directories to external location: Update volume paths to use external /media/e-flix/docker/streamlink-data/ directories for better data management

--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,11 @@ env.env
 *.sqlite
 *.sqlite3
 
-# Download directory
-download/
+# Download directory (now external)
+# download/
 
-# Data directory
-data/
+# Data directory (now external)
+# data/
 
 # Python
 __pycache__/
