--- a/env.example
+++ b/env.example
@@ -18,6 +18,7 @@ DOWNLOAD_PATH=/app/download
 
 # Volume Paths (Required - set your local directories for persistence)
 # These directories will persist data even if the Docker container is deleted/recreated
-DOWNLOAD_VOLUME_PATH=./download
-DATA_VOLUME_PATH=./data
-CONFIG_VOLUME_PATH=./config
+# Recommended: Use external directories outside the project folder
+DOWNLOAD_VOLUME_PATH=/media/e-flix/docker/streamlink-data/download
+DATA_VOLUME_PATH=/media/e-flix/docker/streamlink-data/data
+CONFIG_VOLUME_PATH=/media/e-flix/docker/streamlink-data/config
