Redesign conversion tab: remove volume path inputs, use environment variables, improve layout with better separation, remove immediate conversion option, add scheduled tasks display

--- a/docker-compose.web.yml
+++ b/docker-compose.web.yml
@@ -11,6 +11,7 @@ services:
       - "2344:8080"  # Non-standard port to avoid conflicts
     volumes:
       - ${DOWNLOAD_VOLUME_PATH:-./download}:/app/download
+      - ${CONVERTED_VOLUME_PATH:-./converted}:/app/converted  # For converted MP4 files
       - ${DATA_VOLUME_PATH:-./data}:/app/data  # For database persistence
       - ${CONFIG_VOLUME_PATH:-./config}:/app/config  # For persistent configurations
     environment:
