--- a/env.example
+++ b/env.example
@@ -20,5 +20,6 @@ DOWNLOAD_PATH=/app/download
 # These directories will persist data even if the Docker container is deleted/recreated
 # Recommended: Use external directories outside the project folder
 DOWNLOAD_VOLUME_PATH=/path/to/your/download/directory
+CONVERTED_VOLUME_PATH=/path/to/your/converted/directory
 DATA_VOLUME_PATH=/path/to/your/data/directory
 CONFIG_VOLUME_PATH=/path/to/your/config/directory
