Add favicon support and improve conversion progress UI - Add favicon routes and debugging in app.py - Add favicon links in HTML template - Copy favicon file in Dockerfile - Improve conversion progress table with tooltips and proper delete functionality - Remove red cancel button from completed/failed conversions - Add proper tooltip initialization for dynamic content

--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -17,6 +17,7 @@ COPY twitch_manager.py .
 COPY streamlink_manager.py .
 COPY notification_manager.py .
 COPY templates/ ./templates/
+COPY favicon-new.png .
 
 # Create required directories
 RUN mkdir -p /app/download /app/data /app/config
