--- a/env.example
+++ b/env.example
@@ -23,3 +23,4 @@ DOWNLOAD_VOLUME_PATH=/path/to/your/download/directory
 CONVERTED_VOLUME_PATH=/path/to/your/converted/directory
 DATA_VOLUME_PATH=/path/to/your/data/directory
 CONFIG_VOLUME_PATH=/path/to/your/config/directory
+LOGS_VOLUME_PATH=/path/to/your/logs/directory
