Improve Docker health check configuration for better container startup - Updated docker-compose.yml to use Dockerfile.web instead of Dockerfile - Added explicit health check configuration to docker-compose.yml - Increased health check start period from 5s to 60s to allow for slower startup - Increased timeout from 10s to 15s and retries from 3 to 5 - Changed health check endpoint from /api/status to simpler /health endpoint - Added explicit port mapping for 8080 - These changes should resolve container stuck in 'starting' state

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     image: ghcr.io/liofal/streamlink:3.3.4
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.web
     env_file: 
         # - ../global.env    
         - default.env
@@ -25,6 +25,14 @@ services:
     environment:
       - user=${TWITCH}
       - quality=best
+    ports:
+      - "8080:8080"
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 15s
+      retries: 5
+      start_period: 60s
 
   ffmpeg:
     <<: *common
