--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -43,9 +43,9 @@ EXPOSE 8080
 ENV PORT=8080
 ENV DOWNLOAD_PATH=/app/download
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:8080/api/status || exit 1
+# Health check - more lenient for startup
+HEALTHCHECK --interval=30s --timeout=15s --start-period=60s --retries=5 \
+    CMD wget --no-verbose --tries=1 --spider http://localhost:8080/health || exit 1
 
 # Run the web application
 CMD ["python", "app.py"]
