--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,10 +28,10 @@ services:
     ports:
       - "8080:8080"
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
+      test: ["CMD", "pgrep", "-f", "python.*app.py"]
       interval: 30s
-      timeout: 15s
-      retries: 5
+      timeout: 10s
+      retries: 3
       start_period: 60s
 
   ffmpeg:
