FIX: Add recording_manager.py to Dockerfile.web
- Add missing COPY recording_manager.py . line to Dockerfile.web
- This fixes the ModuleNotFoundError when running the container
- The recording_manager.py file was created but not being copied into the container

--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -16,6 +16,7 @@ COPY streamlink-recorder.py .
 COPY twitch_manager.py .
 COPY streamlink_manager.py .
 COPY notification_manager.py .
+COPY recording_manager.py .
 COPY templates/ ./templates/
 
 # Copy favicon (use favicon-new.png as fallback if favicon.png doesn't exist)
