Fix Dockerfile.web to include stream_monitor.py
- Add stream_monitor.py to the COPY commands in Dockerfile.web
- This resolves the ModuleNotFoundError when the container starts
- The stream_monitor module is required for the new modular architecture

--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -17,6 +17,7 @@ COPY twitch_manager.py .
 COPY streamlink_manager.py .
 COPY notification_manager.py .
 COPY recording_manager.py .
+COPY stream_monitor.py .
 COPY templates/ ./templates/
 
 # Copy favicon (use favicon-new.png as fallback if favicon.png doesn't exist)
